--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ aiohttp = "*"
 setproctitle = "*"
 segtok = "*"
 syntok = "*"
+snowballstemmer = "*"
+wordfreq = "*"
 
 [dev-packages]
 pytest = "*"
